# nCotAi

./: .env  .env.example  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  frontend.md  nginx.conf  replacements.txt
.claude/: settings.local.json
.claude/commands/: backend.md  db.md  frontend.md  integration.md  start.md  test.md
backend/: .env.example  Dockerfile.dev  README.md  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_user_tables.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: audit.py  auth.py  cloud_storage.py  files.py  google_drive_test.py  govbr_auth.py  government_apis.py  health.py  mfa.py  pncp.py  quotations.py  rbac.py  reports.py  sessions.py  team_notifications.py  tenders.py  users.py  websocket.py  whatsapp.py
backend/app/core/: auth.py  config.py  logging.py  security.py  security_middleware.py
backend/app/db/: dependencies.py  mongodb.py  session.py
backend/app/middleware/: __init__.py  monitoring.py
backend/app/models/: __init__.py  notification.py  quotation.py  report.py  tender.py  user.py
backend/app/schemas/: __init__.py  quotation.py  tender.py  user.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  celery.py  cloud_storage_integration_service.py  govbr_sso_service.py  government_api_service.py  mfa_service.py  notification_service.py  pncp_service.py  quotation_service.py  report_service.py  team_notifications_integration_service.py  tender_service.py  token_service.py  user_service.py  websocket_manager.py  whatsapp_integration_service.py
backend/app/services/tasks/: cloud_storage.py  document_processing.py  notifications.py  team_notifications.py  tender_analysis.py
backend/app/utils/: init_db.py
backend/scripts/: init_db.py
backend/src/services/cloud-storage/: __init__.py  cloud_storage_manager.py  dropbox_service.py  google_drive_service.py
backend/src/services/government-apis/: __init__.py  comprasnet_service.py  config.py  government_api_manager.py  pncp_service.py  receita_federal_service.py  siconv_service.py
backend/src/services/team-notifications/: __init__.py  slack_service.py  teams_service.py
backend/src/services/whatsapp-api/: __init__.py  bot_manager.py  config.py  message_templates.py  webhook_handler.py  whatsapp_service.py
backend/tests/: conftest.py  factories.py  test_api_quotations.py  test_api_tenders.py  test_api_users.py  test_audit_compliance.py  test_auth.py  test_google_drive_integration.py  test_integrations.py  test_performance.py  test_rbac.py  test_security.py
docs/: 2025-07-14-this-session-is-being-continued-from-a-previous-co.txt  PROGRESS_AND_FEATURES.md  checkList.md  lovable.md  plano.md
frontend/: .gitignore  2025-07-12-this-session-is-being-continued-from-a-previous-co.txt  Dockerfile.dev  Dockerfile.dev.simple  README.md  TEST_PLAN.md  cypress.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/cypress/e2e/: auth.cy.ts
frontend/cypress/support/: commands.ts
frontend/src/: App.tsx
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/components/ui/: button.test.tsx
frontend/src/components/common/: protected-route.tsx
frontend/src/components/features/dashboard/: activity-feed.tsx  metric-card.tsx  quick-actions.tsx  recent-tenders.tsx
frontend/src/components/features/quotations/: kanban-column.tsx  quotation-card.tsx
frontend/src/components/features/tenders/: tender-table.tsx
frontend/src/components/forms/: index.ts  login-form.tsx
frontend/src/components/layout/: app-layout.tsx  auth-layout.tsx  index.ts
frontend/src/components/ui/: button.tsx  index.ts
frontend/src/hooks/: use-auth.ts
frontend/src/lib/: api.ts  utils.ts  validations.ts
frontend/src/pages/app/quotations/: kanban.tsx
frontend/src/pages/app/tenders/: index.tsx
frontend/src/pages/auth/: login.tsx
frontend/src/pages/dashboard/: index.tsx
frontend/src/stores/: auth-store.ts  index.ts  ui-store.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  auth.ts  index.ts  quotation.ts  tender.ts  user.ts
scripts/: init-mongodb.js  init-postgres.sql
services/ai-engine/: main.py  requirements.txt
services/ai-engine/app/services/: ai_models.py  scoring.py
services/go-pdf-processor/: go.mod  main.go
services/go-pdf-processor/internal/config/: config.go
services/go-pdf-processor/internal/processor/: pdf_processor.go  worker_pool.go
services/security-rust/: Cargo.toml
services/security-rust/src/: crypto.rs  main.rs
