[tool.poetry]
name = "cotai-backend"
version = "0.1.0"
description = "COTAI Backend API - Sistema de Automação para Cotações e Editais"
authors = ["COTAI Team <team@cotai.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"
pymongo = "^4.13.2"
redis = "^6.2.0"
celery = "^5.5.3"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
email-validator = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"
httpx = "^0.28.1"
aiohttp = "^3.12.14"
aiofiles = "^24.1.0"
pillow = "^11.3.0"
pytesseract = "^0.3.13"
scikit-learn = "^1.7.0"
pandas = "^2.3.1"
numpy = "^2.3.1"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^8.2"}
cryptography = "^45.0.5"
slowapi = "^0.1.9"
user-agents = "^2.2.0"
spacy = {version = "^3.8.7", python = ">=3.11,<3.14"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
pytest-xdist = "^3.8.0"
httpx = "^0.28.1"
factory-boy = "^3.3.3"
faker = "^37.4.0"
responses = "^0.25.7"
freezegun = "^1.5.3"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.16.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--strict-markers",
    "--tb=short",
    "--asyncio-mode=auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "security: Security tests",
    "auth: Authentication tests",
    "api: API endpoint tests",
    "models: Model tests",
    "services: Service layer tests",
    "external: External integration tests",
    "performance: Performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/db/migrations/*",
    "app/core/config.py",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.pytest_cache/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]