[package]
name = "cotai-security"
version = "0.1.0"
edition = "2021"
authors = ["COTAI Team"]
description = "High-performance security modules for COTAI platform"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ring = "0.17"
rustls = "0.21"
webpki-roots = "0.25"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"

# Security
jsonwebtoken = "9.2"
time = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Validation
validator = { version = "0.17", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
actix-web-test = "4.4"
tempfile = "3.8"